Adding classes to translate

--- a/python/.dockerignore
+++ b/python/.dockerignore
@@ -1,10 +1,13 @@
 .git
-.ipynb_checkpoints/*
-Dockerfile
-.DS_Store
 .gitignore
+.github/*
+.ipynb_checkpoints/*
+.DS_Store
+.aws-sam
+.vscode
+.dockerignore
+.env
+Dockerfile
 README.md
 Makefile
 docker-compose.yml
-.dockerignore
-.env
