Adding AWS parameters in .env file

--- a/python/.env
+++ b/python/.env
@@ -1,10 +1,7 @@
 #########################################################################
-# Environment variables in this file are available for docker-compose.yml
+# Environment variables in this file are available for other scrips
 #########################################################################
 
-# Compose naming prefix
-COMPOSE_PROJECT_NAME=aws-text-translate
-
-# Docker network name and IPv4 address space (to avoid conflicts if any)
-NETWORK_NAME=aws-text-translate-network
-NETWORK_SUBNET=10.0.0.128/25
+# AWS variables
+AWS_ACCESS_KEY_ID=<YOUR_AWS_ACCESS_KEY_ID>
+AWS_SECRET_ACCESS_KEY=<YOUR_AWS_SECRET_ACCESS_KEY>
